# jan

mcp-test-server/: README.md  pyproject.toml  test_server.py
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/core/: state.rs
src-tauri/src/core/mcp/: commands.rs  helpers.rs  models.rs
src-tauri/src/core/server/: commands.rs  proxy.rs  remote_provider_commands.rs
web-app/src/containers/: MessageItem.tsx
web-app/src/containers/dialogs/: ElicitationDialog.tsx
web-app/src/hooks/: useElicitation.ts  useElicitationDialog.ts
web-app/src/lib/: messages.ts  service.ts
web-app/src/providers/: DataProvider.tsx  GlobalEventHandler.tsx
web-app/src/routes/: __root.tsx
web-app/src/services/mcp/: default.ts  tauri.ts  types.ts  web.ts
web-app/src/types/: elicitation.ts  events.ts  vite-env.d.ts
