[project]
name = "mcp-test-server"
version = "0.1.0"
description = "MCP Test Server for testing elicitation and sampling capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
